# SEAM

./: .gitignore  README.md  pyproject.toml  requirements.txt  walkthrough.md
configs/: default.yaml
edgepatch/: __init__.py  config.py  data.py  decision_points.py  eval.py  masking.py  model.py  rollout.py  scoring.py  spans.py  utils.py
notebooks/: EdgePatch_Colab.ipynb
scripts/: inspect_dataset.py  run_edgepatch.py  test_rollout_metrics.py  test_streaming.py
tests/: __init__.py  test_scoping_sanity.py  test_span_alignment.py
